# bambu-mcp

./: .agent-work.md  .gitignore  PLAN.md  README.md  api_server.py  auth.py  data_collector.py  make.py  notifications.py  port_pool.py  pyproject.toml  secrets_store.py  server.py  session_manager.py  smoke_test.py  thermal_snapshot_monitor.py  user_prefs.py
.github/: copilot-instructions.md
calibration/: calibrate_idle_nozzle_timeout.py  calibrate_tool_change_settle.py  corner_calibration.py  nozzle_compare.py
camera/: __init__.py  calibrate_idle_nozzle_timeout.py  calibrate_tool_change_settle.py  coord_transform.py  corner_calibration.py  job_analyzer.py  job_monitor.py  mjpeg_server.py  nozzle_compare.py  protocol.py  rtsps_stream.py  tcp_stream.py  yolo_detector.py
config/: claude_desktop.example.json  claude_desktop.json  copilot_mcp.example.json  copilot_mcp.json  settings.toml.template
docs/: h2d_3d_planes.py  h2d_bold_viz.py  h2d_converge.py
knowledge/: api_reference.py  api_reference_ams.py  api_reference_camera.py  api_reference_dataclasses.py  api_reference_files.py  api_reference_print.py  api_reference_session.py  api_reference_state.py  behavioral_rules.py  behavioral_rules_alerts.py  behavioral_rules_camera.py  behavioral_rules_camera_calibration.py  behavioral_rules_climate.py  behavioral_rules_job_analysis.py  behavioral_rules_mcp_patterns.py  behavioral_rules_methodology.py  behavioral_rules_print_state.py  behavioral_rules_session.py  enums.py  enums_ams.py  enums_filament.py  enums_printer.py  fallback_strategy.py  http_api.py  http_api_ams.py  http_api_climate.py  http_api_files.py  http_api_hardware.py  http_api_print.py  http_api_printer.py  http_api_system.py  protocol.py  (+5 more)
(+27 files in other folders)
